# sync_install

./: Cargo.toml  LICENSE  Makefile  README.md  cog.toml  commit-msg.sh  pre-commit.sh  rustfmt.toml
dockerfiles/: current_state_from_readme  pixi.toml  target_state_from_readme  tested_example_1  tested_example_2
idempotent_setup/: Dockerfile  README.md  pixi.toml  setup.bash  verify_dockerfile_and_setup.bash
legacy_idempotent_setup/: Dockerfile  Makefile  README.md  pixi.toml  setup.bash  verify_dockerfile_and_setup.bash
src/: cargo_handling.rs  command.rs  command_computing.rs  common.rs  git_handling.rs  happy_path_tests.rs  main.rs  nonempty_str.rs  parsing_error_tests.rs  pixi_handling.rs
tests/: cli.rs  current_state_from_readme  target_state_from_readme
