[package]
name = "sync_install"
version = "0.1.2"
edition = "2021"
rust-version = "1.81.0"

[dependencies]
anyhow = "1"
camino = "1"
clap = { version = "4", features = ["derive"] }
itertools = "0.13"

[dev-dependencies]
cargo_metadata = "0.18"

[profile.dev]
debug = false

[profile.release]
strip = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
nursery = "warn"
pedantic = "warn"
